# owjek

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/: FirstFragment.java  MainActivity.java  OWJEK.java  SecondFragment.java
app/src/main/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/cpp/: CMakeLists.txt  owride.cpp
app/src/main/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/owride/: OWRIDEActivity.java  OWRIDEFragment.java  OWRIDEOpenGLFragment.java  OWRIDEStatusFragment.java
app/src/main/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/util/: Converters.java
app/src/main/res/drawable-v21/: ripple_effect.xml
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_scrolling.xml  fragment_second.xml  main_fragment.xml  owride_fragment.xml  owride_status_fragment.xml
app/src/main/res/navigation/: nav_graph.xml  owjek_nav.xml
app/src/main/res/values/: arrays.xml  colors.xml  logo_background.xml  strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/id/ac/ui/cs/mobileprogramming/mohammadammarramadhan/owjek/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
